--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/roboto": "^0.2.3",
     "@types/styled-components": "^5.1.34",
     "@types/styled-components-react-native": "^5.2.5",
     "expo": "~52.0.19",
+    "expo-font": "~13.0.1",
     "expo-status-bar": "~2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
