--- a/app.json
+++ b/app.json
@@ -11,20 +11,24 @@
       "resizeMode": "cover",
       "backgroundColor": "#202024"
     },
-    "assetBundlePatterns": ["**/*"],
+    "assetBundlePatterns": [
+      "**/*"
+    ],
     "ios": {
       "supportsTablet": true,
       "splash": {
         "image": "./assets/splash.png",
         "resizeMode": "cover",
         "backgroundColor": "#202024"
-      }
+      },
+      "bundleIdentifier": "com.anonymous.iginitefleet"
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/splash.png",
         "backgroundColor": "#202024"
-      }
+      },
+      "package": "com.anonymous.iginitefleet"
     },
     "web": {
       "favicon": "./assets/favicon.png"
