--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "index.ts",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -15,6 +15,7 @@
     "expo": "~52.0.19",
     "expo-font": "~13.0.1",
     "expo-status-bar": "~2.0.0",
+    "expo-system-ui": "^4.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "0.76.5",
