--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-google-signin/google-signin": "^10.1.1",
+    "expo-splash-screen": "~0.18.1",
     "@expo-google-fonts/roboto": "^0.2.3",
     "@types/styled-components": "^5.1.34",
     "@types/styled-components-react-native": "^5.2.5",
