--- a/package.json
+++ b/package.json
@@ -9,25 +9,32 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-google-signin/google-signin": "^10.1.1",
-    "expo-splash-screen": "~0.18.1",
     "@expo-google-fonts/roboto": "^0.2.3",
+    "@react-native-google-signin/google-signin": "^10.1.1",
+    "@realm/react": "^0.4.3",
     "@types/styled-components": "^5.1.34",
     "@types/styled-components-react-native": "^5.2.5",
-    "expo": "~52.0.19",
-    "expo-font": "~13.0.1",
+    "expo": "~52.0.20",
+    "expo-auth-session": "~6.0.1",
+    "expo-crypto": "~14.0.1",
+    "expo-font": "~13.0.2",
+    "expo-splash-screen": "~0.29.18",
     "expo-status-bar": "~2.0.0",
     "expo-system-ui": "^4.0.6",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "react-native": "0.76.5",
+    "realm": "^12.14.0",
     "styled-components": "^6.1.13"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@tsconfig/react-native": "^3.0.5",
+    "@types/jest": "^29.5.14",
     "@types/react": "~18.3.12",
+    "@types/react-test-renderer": "^19.0.0",
     "react-native-dotenv": "^3.4.11",
-    "typescript": "^5.3.3"
+    "typescript": "^5.7.2"
   },
   "private": true
 }
