--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
   "dependencies": {
     "@expo-google-fonts/roboto": "^0.2.3",
     "@react-native-google-signin/google-signin": "^10.1.1",
-    "@realm/react": "^0.4.3",
+    "@realm/react": "^0.11.0",
     "@types/styled-components": "^5.1.34",
     "@types/styled-components-react-native": "^5.2.5",
     "expo": "~52.0.20",
     "expo-auth-session": "~6.0.1",
     "expo-crypto": "~14.0.1",
+    "expo-dev-client": "~5.0.6",
     "expo-font": "~13.0.2",
     "expo-splash-screen": "~0.29.18",
     "expo-status-bar": "~2.0.0",
