--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "expo-splash-screen": "~0.29.18",
     "expo-status-bar": "~2.0.0",
     "expo-system-ui": "^4.0.6",
+    "phosphor-react-native": "^2.2.2",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.5",
+    "react-native-svg": "15.8.0",
     "realm": "^12.14.0",
     "styled-components": "^6.1.13"
   },
