--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-native": "0.76.5",
     "react-native-svg": "15.8.0",
     "realm": "^12.14.0",
-    "styled-components": "^6.1.13"
+    "styled-components": "^6.1.13",
+    "expo-image": "~2.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
