--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@expo-google-fonts/roboto": "^0.2.3",
     "@react-native-google-signin/google-signin": "^10.1.1",
+    "@react-navigation/native": "^7.0.14",
+    "@react-navigation/native-stack": "^7.2.0",
     "@realm/react": "^0.11.0",
     "@types/styled-components": "^5.1.34",
     "@types/styled-components-react-native": "^5.2.5",
@@ -19,6 +21,7 @@
     "expo-crypto": "~14.0.1",
     "expo-dev-client": "~5.0.6",
     "expo-font": "~13.0.2",
+    "expo-image": "~2.0.3",
     "expo-splash-screen": "~0.29.18",
     "expo-status-bar": "~2.0.0",
     "expo-system-ui": "^4.0.6",
@@ -26,10 +29,11 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.5",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.1.0",
     "react-native-svg": "15.8.0",
     "realm": "^12.14.0",
-    "styled-components": "^6.1.13",
-    "expo-image": "~2.0.3"
+    "styled-components": "^6.1.13"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
