--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@realm/react": "^0.11.0",
     "@types/styled-components": "^5.1.34",
     "@types/styled-components-react-native": "^5.2.5",
+    "dayjs": "^1.11.13",
     "expo": "~52.0.20",
     "expo-auth-session": "~6.0.1",
     "expo-crypto": "~14.0.1",
