--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-dom": "18.3.1",
     "react-native": "0.76.5",
     "react-native-get-random-values": "^1.11.0",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
     "react-native-svg": "15.8.0",
